<resources>
    <string name="app_name">My FORMULARIO</string>
    <string name="titulo"> Mi formulario </string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="correo">Correo</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="titulo2"> Mis Datos</string>
    <string name="btnOk">Ok</string>
</resources>

